# mcm-lin-firmware

./: .gitattributes  .gitignore  .gitmodules  README.md  REST_API.md  WSS_API.md
.github/workflows/: build.yml
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/bus_manager/: CMakeLists.txt  Kconfig  bus_manager.c
firmware/bus_manager/include/: bus_manager.h
firmware/device_info/: CMakeLists.txt  device_info.c
firmware/device_info/include/: device_info.h
firmware/device_status/: CMakeLists.txt  Kconfig  device_status.c
firmware/device_status/include/: device_status.h
firmware/lin_master/: CMakeLists.txt  Kconfig  lin_master.c  lin_tl.c
firmware/lin_master/include/: lin_errors.h  lin_master.h  lin_tl.h
firmware/main/: idf_component.yml  main.c
firmware/mlx_err/: CMakeLists.txt  mlx_err.c
firmware/mlx_err/include/: mlx_err.h
firmware/networking/: CMakeLists.txt  Kconfig  networking.c  wifi.c
firmware/networking/include/: networking.h  wifi.h
firmware/ota_support/: CMakeLists.txt  ota_support.c
firmware/ota_support/include/: ota_support.h
firmware/power_ctrl/: CMakeLists.txt  Kconfig  power_ctrl.c
firmware/power_ctrl/include/: power_ctrl.h
firmware/usb_device/: CMakeLists.txt  vendor_device.c
firmware/usb_device/include/: tusb_config.h  usb_descriptors.h  usb_device.h  vendor_device.h
firmware/usb_device/src/: usb_descriptors.c  usb_device.c  usb_vendor_bulk.c  usb_vendor_bulk.h  vendor_device.c
firmware/usb_device/src/vendor_req_hndl/: usb_vendor_btl_ppm.c  usb_vendor_btl_ppm.h  usb_vendor_config.c  usb_vendor_config.h  usb_vendor_hex_transfer.c  usb_vendor_hex_transfer.h  usb_vendor_identify.c  usb_vendor_identify.h  usb_vendor_lin_comm.c  usb_vendor_lin_comm.h  usb_vendor_ota.c  usb_vendor_ota.h  usb_vendor_req_info.c  usb_vendor_req_info.h  usb_vendor_reset.c  usb_vendor_reset.h  usb_vendor_slave_power.c  usb_vendor_slave_power.h
firmware/webserver/: CMakeLists.txt  http_webserver.c  urihandlers_rest.c  urihandlers_wss.c  urihandlers_www.c  webserver.c
firmware/webserver/certs/: prvtkey.pem  req-ssl.cnf  servercert.pem
firmware/webserver/include/: http_webserver.h  urihandlers_rest.h  urihandlers_wss.h  urihandlers_www.h  webserver.h
firmware/www_bin/: CMakeLists.txt
firmware/www_bin/generate/: generate.py  py-requirements.txt  www_bin.c.mako  www_bin.h.mako
frontend/: README.md  eslint.config.js  grab-git-info.cjs  package.json  vite.config.js
frontend/src/: main.js
frontend/src/components/: NavBar.vue
frontend/src/js/: ethMcm.js  ethernetTransport.js  linComm.js  restApi.js
frontend/src/router/: index.js
frontend/src/views/: HomePage.vue
frontend/src/views/lin/: LinCommander.vue
frontend/src/views/ppm/: One2One.vue
frontend/src/views/system/: SystemConfig.vue  SystemDetails.vue  SystemReboot.vue
verification/tests/: __init__.py  conftest.py  py-requirements.txt  test_mcm_rest_api.py  test_mcm_vendor_itf.py  tox.ini
verification/uncrustify/: uncrustify.cfg
